--- a/.gitignore
+++ b/.gitignore
@@ -170,3 +170,5 @@
 /projects/13-SINGLE_WIRE_WITH_DHT11/PIC16F628A/MPLAB_EXAMPLE/PIC16F628A_DHT11_LCD16x2.X/dist/
 /projects/14-GAS_SENSOR/PIC10F222/MPLAB_EXAMPLE/PIC10F222_MQ_2.X/build/
 /projects/14-GAS_SENSOR/PIC10F222/MPLAB_EXAMPLE/PIC10F222_MQ_2.X/dist/
+/projects/14-GAS_SENSOR/PIC16F887/MPLAB_EXAMPLE/PIC16887_MQ_GAS_SENSOR.X/dist/
+/projects/14-GAS_SENSOR/PIC16F887/MPLAB_EXAMPLE/PIC16887_MQ_GAS_SENSOR.X/build/
