--- a/.gitignore
+++ b/.gitignore
@@ -172,3 +172,5 @@
 /projects/14-GAS_SENSOR/PIC10F222/MPLAB_EXAMPLE/PIC10F222_MQ_2.X/dist/
 /projects/14-GAS_SENSOR/PIC16F887/MPLAB_EXAMPLE/PIC16887_MQ_GAS_SENSOR.X/dist/
 /projects/14-GAS_SENSOR/PIC16F887/MPLAB_EXAMPLE/PIC16887_MQ_GAS_SENSOR.X/build/
+/projects/14-GAS_SENSOR/PIC12F675/MPLAB_EXAMPLES/PIC12F675_MQ_2_LEDs_C.X/dist/
+/projects/14-GAS_SENSOR/PIC12F675/MPLAB_EXAMPLES/PIC12F675_MQ_2_LEDs_C.X/build/
