--- a/.gitignore
+++ b/.gitignore
@@ -174,3 +174,7 @@
 /projects/14-GAS_SENSOR/PIC16F887/MPLAB_EXAMPLE/PIC16887_MQ_GAS_SENSOR.X/build/
 /projects/14-GAS_SENSOR/PIC12F675/MPLAB_EXAMPLES/PIC12F675_MQ_2_LEDs_C.X/dist/
 /projects/14-GAS_SENSOR/PIC12F675/MPLAB_EXAMPLES/PIC12F675_MQ_2_LEDs_C.X/build/
+/projects/14-GAS_SENSOR/PIC12F675/MPLAB_EXAMPLES/PIC12F675_MQ_X_INTERFACE.X/build/
+/projects/14-GAS_SENSOR/PIC12F675/MPLAB_EXAMPLES/PIC12F675_MQ_X_INTERFACE.X/dist/
+/projects/14-GAS_SENSOR/PIC16F887/MPLAB_EXAMPLE/PIC16F887_MQ_X_INTERFACE.X/build/
+/projects/14-GAS_SENSOR/PIC16F887/MPLAB_EXAMPLE/PIC16F887_MQ_X_INTERFACE.X/dist/
