--- a/.gitignore
+++ b/.gitignore
@@ -184,3 +184,5 @@
 /projects/14-GAS_SENSOR/PIC12F675/MPLAB_EXAMPLES/PIC12F675_MQ_X_INTERFACE_C.X/build/
 /projects/99-Servomotor/PIC10F200/MPLAB_EXAMPLES/PIC10F200_SERVO_2_BUTTONS.X/dist/
 /projects/99-Servomotor/PIC10F200/MPLAB_EXAMPLES/PIC10F200_SERVO_2_BUTTONS.X/build/
+/projects/99-Servomotor/PIC10F200/MPLAB_EXAMPLES/PIC10F200_SERVO_2_BUTTONS_ASM.X/dist/
+/projects/99-Servomotor/PIC10F200/MPLAB_EXAMPLES/PIC10F200_SERVO_2_BUTTONS_ASM.X/build/
