--- a/.gitignore
+++ b/.gitignore
@@ -186,3 +186,7 @@
 /projects/99-Servomotor/PIC10F200/MPLAB_EXAMPLES/PIC10F200_SERVO_2_BUTTONS.X/build/
 /projects/99-Servomotor/PIC10F200/MPLAB_EXAMPLES/PIC10F200_SERVO_2_BUTTONS_ASM.X/dist/
 /projects/99-Servomotor/PIC10F200/MPLAB_EXAMPLES/PIC10F200_SERVO_2_BUTTONS_ASM.X/build/
+/projects/16-SERVO/PIC10F200/MPLAB_EXAMPLES/PIC10F200_SERVO_2_BUTTONS_ASM.X/dist/
+/projects/16-SERVO/PIC10F200/MPLAB_EXAMPLES/PIC10F200_SERVO_2_BUTTONS_ASM.X/build/
+/projects/16-SERVO/PIC10F200/MPLAB_EXAMPLES/PIC10F200_SERVO_3_BUTTONS_ASM.X/build/
+/projects/16-SERVO/PIC10F200/MPLAB_EXAMPLES/PIC10F200_SERVO_3_BUTTONS_ASM.X/dist/
