--- a/.gitignore
+++ b/.gitignore
@@ -190,3 +190,5 @@
 /projects/16-SERVO/PIC10F200/MPLAB_EXAMPLES/PIC10F200_SERVO_2_BUTTONS_ASM.X/build/
 /projects/16-SERVO/PIC10F200/MPLAB_EXAMPLES/PIC10F200_SERVO_3_BUTTONS_ASM.X/build/
 /projects/16-SERVO/PIC10F200/MPLAB_EXAMPLES/PIC10F200_SERVO_3_BUTTONS_ASM.X/dist/
+/projects/16-SERVO/PIC10F200/MPLAB_EXAMPLES/PIC10F200_SERVO_3_BUTTONS_C.X/dist/
+/projects/16-SERVO/PIC10F200/MPLAB_EXAMPLES/PIC10F200_SERVO_3_BUTTONS_C.X/build/
