--- a/.gitignore
+++ b/.gitignore
@@ -192,3 +192,5 @@
 /projects/16-SERVO/PIC10F200/MPLAB_EXAMPLES/PIC10F200_SERVO_3_BUTTONS_ASM.X/dist/
 /projects/16-SERVO/PIC10F200/MPLAB_EXAMPLES/PIC10F200_SERVO_3_BUTTONS_C.X/dist/
 /projects/16-SERVO/PIC10F200/MPLAB_EXAMPLES/PIC10F200_SERVO_3_BUTTONS_C.X/build/
+/projects/14-GAS_SENSOR/PIC10F220/PIC10F220_MQ_X_GAS_SENSOR_ASM.X/build/
+/projects/14-GAS_SENSOR/PIC10F220/PIC10F220_MQ_X_GAS_SENSOR_ASM.X/dist/
