--- a/.gitignore
+++ b/.gitignore
@@ -196,3 +196,7 @@
 /projects/14-GAS_SENSOR/PIC10F220/PIC10F220_MQ_X_GAS_SENSOR_ASM.X/dist/
 /projects/14-GAS_SENSOR/PIC10F220/PIC10F220_MQ_X_GAS_SENSOR_C.X/dist/
 /projects/14-GAS_SENSOR/PIC10F220/PIC10F220_MQ_X_GAS_SENSOR_C.X/build/
+/projects/17-INFRARED_IR_TX_RX/PIC10F200/MPLAB_EXAMPLE/PIC10F200_IR_NEC_ASM.X/dist/
+/projects/17-INFRARED_IR_TX_RX/PIC10F200/MPLAB_EXAMPLE/PIC10F200_IR_NEC_ASM.X/build/
+/projects/17-INFRARED_IR_TX_RX/PIC10F200/MPLAB_EXAMPLE/PIC10F200_IR_TX_NEC_ASM.X/dist/
+/projects/17-INFRARED_IR_TX_RX/PIC10F200/MPLAB_EXAMPLE/PIC10F200_IR_TX_NEC_ASM.X/build/
