--- a/.gitignore
+++ b/.gitignore
@@ -200,3 +200,5 @@
 /projects/17-INFRARED_IR_TX_RX/PIC10F200/MPLAB_EXAMPLE/PIC10F200_IR_NEC_ASM.X/build/
 /projects/17-INFRARED_IR_TX_RX/PIC10F200/MPLAB_EXAMPLE/PIC10F200_IR_TX_NEC_ASM.X/dist/
 /projects/17-INFRARED_IR_TX_RX/PIC10F200/MPLAB_EXAMPLE/PIC10F200_IR_TX_NEC_ASM.X/build/
+/projects/17-INFRARED_IR_TX_RX/PIC10F200/MPLAB_EXAMPLE/PIC10F200_IR_RX_NEC_ASM.X/build/
+/projects/17-INFRARED_IR_TX_RX/PIC10F200/MPLAB_EXAMPLE/PIC10F200_IR_RX_NEC_ASM.X/dist/
