--- a/.gitignore
+++ b/.gitignore
@@ -202,3 +202,5 @@
 /projects/17-INFRARED_IR_TX_RX/PIC10F200/MPLAB_EXAMPLE/PIC10F200_IR_TX_NEC_ASM.X/build/
 /projects/17-INFRARED_IR_TX_RX/PIC10F200/MPLAB_EXAMPLE/PIC10F200_IR_RX_NEC_ASM.X/build/
 /projects/17-INFRARED_IR_TX_RX/PIC10F200/MPLAB_EXAMPLE/PIC10F200_IR_RX_NEC_ASM.X/dist/
+/projects/17-INFRARED_IR_TX_RX/PIC10F200/MPLAB_EXAMPLE/PIC10F200_IR_RX_REPLICATE_TX_ASM.X/dist/
+/projects/17-INFRARED_IR_TX_RX/PIC10F200/MPLAB_EXAMPLE/PIC10F200_IR_RX_REPLICATE_TX_ASM.X/build/
