--- a/.gitignore
+++ b/.gitignore
@@ -206,3 +206,7 @@
 /projects/17-INFRARED_IR_TX_RX/PIC10F200/MPLAB_EXAMPLE/PIC10F200_IR_RX_REPLICATE_TX_ASM.X/build/
 /projects/17-INFRARED_IR_TX_RX/PIC12F675/MPLAB_EXAMPLE/PIC12F675_NEC_TX_C.X/build/
 /projects/17-INFRARED_IR_TX_RX/PIC12F675/MPLAB_EXAMPLE/PIC12F675_NEC_TX_C.X/dist/
+/projects/16-SERVO/PIC12F675/MPLAB_EXAMPLE/PIC12F675_PWM_SERVO.X/dist/
+/projects/16-SERVO/PIC12F675/MPLAB_EXAMPLE/PIC12F675_PWM_SERVO.X/build/
+/projects/16-SERVO/PIC12F675/MPLAB_EXAMPLE/PIC12F675_PWM_COOLER.X/dist/
+/projects/16-SERVO/PIC12F675/MPLAB_EXAMPLE/PIC12F675_PWM_COOLER.X/build/
