--- a/.gitignore
+++ b/.gitignore
@@ -210,3 +210,5 @@
 /projects/16-SERVO/PIC12F675/MPLAB_EXAMPLE/PIC12F675_PWM_SERVO.X/build/
 /projects/16-SERVO/PIC12F675/MPLAB_EXAMPLE/PIC12F675_PWM_COOLER.X/dist/
 /projects/16-SERVO/PIC12F675/MPLAB_EXAMPLE/PIC12F675_PWM_COOLER.X/build/
+/projects/05-PWM-SPEED-COOLER/PIC12F675/MPLAB_EXAMPLE/PIC12F675_SERVO_CONTROL.X/dist/
+/projects/05-PWM-SPEED-COOLER/PIC12F675/MPLAB_EXAMPLE/PIC12F675_SERVO_CONTROL.X/build/
