--- a/.gitignore
+++ b/.gitignore
@@ -212,3 +212,5 @@
 /projects/16-SERVO/PIC12F675/MPLAB_EXAMPLE/PIC12F675_PWM_COOLER.X/build/
 /projects/05-PWM-SPEED-COOLER/PIC12F675/MPLAB_EXAMPLE/PIC12F675_SERVO_CONTROL.X/dist/
 /projects/05-PWM-SPEED-COOLER/PIC12F675/MPLAB_EXAMPLE/PIC12F675_SERVO_CONTROL.X/build/
+/projects/05-PWM-SPEED-COOLER/PIC12F675/MPLAB_EXAMPLE/PIC12F675_PWM_COOLER_CONTROL_ASM.X/build/
+/projects/05-PWM-SPEED-COOLER/PIC12F675/MPLAB_EXAMPLE/PIC12F675_PWM_COOLER_CONTROL_ASM.X/dist/
