--- a/.gitignore
+++ b/.gitignore
@@ -214,3 +214,5 @@
 /projects/05-PWM-SPEED-COOLER/PIC12F675/MPLAB_EXAMPLE/PIC12F675_SERVO_CONTROL.X/build/
 /projects/05-PWM-SPEED-COOLER/PIC12F675/MPLAB_EXAMPLE/PIC12F675_PWM_COOLER_CONTROL_ASM.X/build/
 /projects/05-PWM-SPEED-COOLER/PIC12F675/MPLAB_EXAMPLE/PIC12F675_PWM_COOLER_CONTROL_ASM.X/dist/
+/projects/05-PWM-SPEED-COOLER/PIC12F675/MPLAB_EXAMPLE/PIC12F675_PWM_COOLER_CONTROL_C.X/dist/
+/projects/05-PWM-SPEED-COOLER/PIC12F675/MPLAB_EXAMPLE/PIC12F675_PWM_COOLER_CONTROL_C.X/build/
