--- a/.gitignore
+++ b/.gitignore
@@ -216,3 +216,4 @@
 /projects/05-PWM-SPEED-COOLER/PIC12F675/MPLAB_EXAMPLE/PIC12F675_PWM_COOLER_CONTROL_ASM.X/dist/
 /projects/05-PWM-SPEED-COOLER/PIC12F675/MPLAB_EXAMPLE/PIC12F675_PWM_COOLER_CONTROL_C.X/dist/
 /projects/05-PWM-SPEED-COOLER/PIC12F675/MPLAB_EXAMPLE/PIC12F675_PWM_COOLER_CONTROL_C.X/build/
+/projects/16-SERVO/PIC12F675/MPLAB_EXAMPLE/PIC12F675_PWM_SERVO_CONTROL.X/dist/
