--- a/.gitignore
+++ b/.gitignore
@@ -217,3 +217,7 @@
 /projects/05-PWM-SPEED-COOLER/PIC12F675/MPLAB_EXAMPLE/PIC12F675_PWM_COOLER_CONTROL_C.X/dist/
 /projects/05-PWM-SPEED-COOLER/PIC12F675/MPLAB_EXAMPLE/PIC12F675_PWM_COOLER_CONTROL_C.X/build/
 /projects/16-SERVO/PIC12F675/MPLAB_EXAMPLE/PIC12F675_PWM_SERVO_CONTROL.X/dist/
+/projects/18-PUSH_BUTTON_INTERRUPT/PIC16F628A/MPLAB_EXAMPLE/PIC16F628A_PUSH_BUTTON_INT_C.X/dist/
+/projects/18-PUSH_BUTTON_INTERRUPT/PIC16F628A/MPLAB_EXAMPLE/PIC16F628A_PUSH_BUTTON_INT_C.X/build/
+/projects/18-PUSH_BUTTON_INTERRUPT/PIC12F675/MPLAB_EXAMPLE/PIC12F675_PUSH_BUTTON_INT_C.X/build/
+/projects/18-PUSH_BUTTON_INTERRUPT/PIC12F675/MPLAB_EXAMPLE/PIC12F675_PUSH_BUTTON_INT_C.X/dist/
