--- a/projects/16-SERVO/PIC10F200/MPLAB_EXAMPLES/PIC10F200_SERVO_3_BUTTONS_ASM.X/nbproject/Makefile-genesis.properties
+++ b/projects/16-SERVO/PIC10F200/MPLAB_EXAMPLES/PIC10F200_SERVO_3_BUTTONS_ASM.X/nbproject/Makefile-genesis.properties
@@ -1,13 +1,13 @@
 #
-#Tue Mar 05 16:39:20 BRT 2024
-default.languagetoolchain.version=2.46
-default.Pack.dfplocation=/Applications/microchip/mplabx/v6.20/packs/Microchip/PIC10-12Fxxx_DFP/1.7.178
-default.com-microchip-mplab-mdbcore-simulator-Simulator.md5=12722e6d79d676de80101102f40a9a53
-default.com-microchip-mplab-nbide-toolchain-picasm-PICASMLanguageToolchain.md5=9ec152e4e6613316b62acb929bcaf32b
+#Tue Mar 26 15:24:23 BRT 2024
+default.languagetoolchain.version=2.45
+default.Pack.dfplocation=/home/ricardo/.mchp_packs/Microchip/PIC10-12Fxxx_DFP/1.7.178
+default.com-microchip-mplab-mdbcore-simulator-Simulator.md5=aa9d1097190a66d1314d421a6f2603b4
+default.com-microchip-mplab-nbide-toolchain-picasm-PICASMLanguageToolchain.md5=aab456b33fb548eae4c75930dd850ef3
 conf.ids=default
-default.languagetoolchain.dir=/Applications/microchip/xc8/v2.46/pic-as/bin
-host.id=0
-configurations-xml=e5c0265a458ca940895537afbd591178
-com-microchip-mplab-nbide-embedded-makeproject-MakeProject.md5=f612087c95360c842296d189edfe3321
-proj.dir=/Users/rcaratti/Desenvolvimento/eu/PIC/PIC16F/projects/16-SERVO/PIC10F200/MPLAB_EXAMPLES/PIC10F200_SERVO_3_BUTTONS_ASM.X
-host.platform=mac
+default.languagetoolchain.dir=/opt/microchip/xc8/v2.45/pic-as/bin
+host.id=1py0-qi1w-pg
+configurations-xml=3378a8922d69807481eb1287a3aed94f
+com-microchip-mplab-nbide-embedded-makeproject-MakeProject.md5=e62346c0c0ecee2637e613b49cb7b7fa
+proj.dir=/home/ricardo/projetos/PIC/PIC16F/projects/16-SERVO/PIC10F200/MPLAB_EXAMPLES/PIC10F200_SERVO_3_BUTTONS_ASM.X
+host.platform=linux
