--- a/.gitignore
+++ b/.gitignore
@@ -221,3 +221,7 @@
 /projects/18-PUSH_BUTTON_INTERRUPT/PIC16F628A/MPLAB_EXAMPLE/PIC16F628A_PUSH_BUTTON_INT_C.X/build/
 /projects/18-PUSH_BUTTON_INTERRUPT/PIC12F675/MPLAB_EXAMPLE/PIC12F675_PUSH_BUTTON_INT_C.X/build/
 /projects/18-PUSH_BUTTON_INTERRUPT/PIC12F675/MPLAB_EXAMPLE/PIC12F675_PUSH_BUTTON_INT_C.X/dist/
+/projects/18-PUSH_BUTTON_INTERRUPT/PIC12F675/MPLAB_EXAMPLE/PIC12F675_PUSH_BUTTON_INT_ASM.X/build/
+/projects/18-PUSH_BUTTON_INTERRUPT/PIC12F675/MPLAB_EXAMPLE/PIC12F675_PUSH_BUTTON_INT_ASM.X/dist/
+/projects/18-PUSH_BUTTON_INTERRUPT/PIC16F628A/MPLAB_EXAMPLE/PIC16F628A_PUSH_BUTTON_INT_ASM.X/build/
+/projects/18-PUSH_BUTTON_INTERRUPT/PIC16F628A/MPLAB_EXAMPLE/PIC16F628A_PUSH_BUTTON_INT_ASM.X/dist/
