--- a/.gitignore
+++ b/.gitignore
@@ -225,3 +225,7 @@
 /projects/18-PUSH_BUTTON_INTERRUPT/PIC12F675/MPLAB_EXAMPLE/PIC12F675_PUSH_BUTTON_INT_ASM.X/dist/
 /projects/18-PUSH_BUTTON_INTERRUPT/PIC16F628A/MPLAB_EXAMPLE/PIC16F628A_PUSH_BUTTON_INT_ASM.X/build/
 /projects/18-PUSH_BUTTON_INTERRUPT/PIC16F628A/MPLAB_EXAMPLE/PIC16F628A_PUSH_BUTTON_INT_ASM.X/dist/
+/projects/07-HC-S04-URTASONIC/PIC10F200/MPLAB_EXAMPLE/HC_S04_PIC10F200_LED_ASM.X/build/
+/projects/07-HC-S04-URTASONIC/PIC10F200/MPLAB_EXAMPLE/HC_S04_PIC10F200_LED_ASM.X/dist/
+/projects/07-HC-S04-URTASONIC/PIC12F675/MPLAB_EXAMPLE/HC_S04_PIC12F675_3LEDs_ASM.X/build/
+/projects/07-HC-S04-URTASONIC/PIC12F675/MPLAB_EXAMPLE/HC_S04_PIC12F675_3LEDs_ASM.X/dist/
