--- a/projects/07-HC-S04-URTASONIC/PIC12F675/MPLAB_EXAMPLE/HC_S04_PIC12F675_3LEDs_ASM.X/nbproject/Makefile-genesis.properties
+++ b/projects/07-HC-S04-URTASONIC/PIC12F675/MPLAB_EXAMPLE/HC_S04_PIC12F675_3LEDs_ASM.X/nbproject/Makefile-genesis.properties
@@ -1,13 +1,13 @@
 #
-#Thu Jan 25 09:47:23 BRT 2024
-default.languagetoolchain.version=2.45
-default.Pack.dfplocation=/home/ricardo/.mchp_packs/Microchip/PIC10-12Fxxx_DFP/1.7.178
-default.com-microchip-mplab-nbide-toolchain-picasm-PICASMLanguageToolchain.md5=aab456b33fb548eae4c75930dd850ef3
+#Wed Mar 27 15:01:24 BRT 2024
+default.languagetoolchain.version=2.46
+default.Pack.dfplocation=/Applications/microchip/mplabx/v6.20/packs/Microchip/PIC10-12Fxxx_DFP/1.7.178
+default.com-microchip-mplab-nbide-toolchain-picasm-PICASMLanguageToolchain.md5=9ec152e4e6613316b62acb929bcaf32b
 conf.ids=default
-default.languagetoolchain.dir=/opt/microchip/xc8/v2.45/pic-as/bin
+default.languagetoolchain.dir=/Applications/microchip/xc8/v2.46/pic-as/bin
 host.id=0
-configurations-xml=6dbeb9e86d6aef99f318361ec19f5a3f
-default.com-microchip-mplab-mdbcore-PICKit3Tool-PICkit3DbgToolManager.md5=50072f33d27b72924000ca2dca4b7622
-com-microchip-mplab-nbide-embedded-makeproject-MakeProject.md5=e62346c0c0ecee2637e613b49cb7b7fa
-proj.dir=/home/ricardo/projetos/PIC/PIC16F/projects/07-HC-S04-URTASONIC/MPLAB_EXAMPLE/HC_S04_PIC12F675_3LEDs_ASM.X
-host.platform=linux
+configurations-xml=9e52b1e086e61579ab8dd52a55bba778
+default.com-microchip-mplab-mdbcore-PICKit3Tool-PICkit3DbgToolManager.md5=5b9902b017a30efdeb77dee75a1e4e51
+com-microchip-mplab-nbide-embedded-makeproject-MakeProject.md5=f612087c95360c842296d189edfe3321
+proj.dir=/Users/rcaratti/Desenvolvimento/eu/PIC/PIC16F/projects/07-HC-S04-URTASONIC/PIC12F675/MPLAB_EXAMPLE/HC_S04_PIC12F675_3LEDs_ASM.X
+host.platform=mac
