--- a/.gitignore
+++ b/.gitignore
@@ -231,3 +231,5 @@
 /projects/07-HC-S04-URTASONIC/PIC12F675/MPLAB_EXAMPLE/HC_S04_PIC12F675_3LEDs_ASM.X/dist/
 /projects/19-74HC151_MULTIPLEXER/PIC12F675/MPLAB_EXAMPLE/PIC12F675_74HC151_MULTIPLEXER_C.X/build/
 /projects/19-74HC151_MULTIPLEXER/PIC12F675/MPLAB_EXAMPLE/PIC12F675_74HC151_MULTIPLEXER_C.X/dist/
+/projects/19-74HC151_MULTIPLEXER/PIC16F887/PIC16F887_74HC151_MULTIPLEXER.X/build/
+/projects/19-74HC151_MULTIPLEXER/PIC16F887/PIC16F887_74HC151_MULTIPLEXER.X/dist/
