--- a/projects/19-74HC151_MULTIPLEXER/PIC12F675/MPLAB_EXAMPLE/PIC12F675_74HC151_MULTIPLEXER_C.X/nbproject/Makefile-genesis.properties
+++ b/projects/19-74HC151_MULTIPLEXER/PIC12F675/MPLAB_EXAMPLE/PIC12F675_74HC151_MULTIPLEXER_C.X/nbproject/Makefile-genesis.properties
@@ -1,12 +1,12 @@
 #
-#Mon Apr 01 20:15:26 BRT 2024
+#Wed Apr 03 10:11:09 BRT 2024
 default.languagetoolchain.version=2.46
 default.Pack.dfplocation=/Applications/microchip/mplabx/v6.20/packs/Microchip/PIC10-12Fxxx_DFP/1.7.178
 conf.ids=default
 default.languagetoolchain.dir=/Applications/microchip/xc8/v2.46/bin
 host.id=0
-default.platformTool.md5=null
 configurations-xml=474b5eb8d7132c39638cf753bee87218
+default.com-microchip-mplab-mdbcore-PICKit3Tool-PICkit3DbgToolManager.md5=5b9902b017a30efdeb77dee75a1e4e51
 com-microchip-mplab-nbide-embedded-makeproject-MakeProject.md5=f612087c95360c842296d189edfe3321
 default.com-microchip-mplab-nbide-toolchain-xc8-XC8LanguageToolchain.md5=bf89cdcdd6c0a49174fe4b605ef2b42d
 proj.dir=/Users/rcaratti/Desenvolvimento/eu/PIC/PIC16F/projects/19-74HC151_MULTIPLEXER/PIC12F675/MPLAB_EXAMPLE/PIC12F675_74HC151_MULTIPLEXER_C.X
