--- a/projects/19-74HC151_DIGITAL_MULTIPLEXER/PIC12F675/MPLAB_EXAMPLE/PIC12F675_74HC151_MULTIPLEXER_C.X/nbproject/Makefile-genesis.properties
+++ b/projects/19-74HC151_DIGITAL_MULTIPLEXER/PIC12F675/MPLAB_EXAMPLE/PIC12F675_74HC151_MULTIPLEXER_C.X/nbproject/Makefile-genesis.properties
@@ -1,13 +1,13 @@
 #
-#Thu Apr 04 13:44:04 BRT 2024
+#Thu Apr 04 20:14:06 BRT 2024
 default.languagetoolchain.version=2.45
-default.Pack.dfplocation=/home/ricardo/.mchp_packs/Microchip/PIC10-12Fxxx_DFP/1.7.178
+default.Pack.dfplocation=/Applications/microchip/mplabx/v6.20/packs/Microchip/PIC10-12Fxxx_DFP/1.7.178
 conf.ids=default
-default.languagetoolchain.dir=/opt/microchip/xc8/v2.45/bin
-host.id=1py0-qi1w-pg
+default.languagetoolchain.dir=/Applications/microchip/xc8/v2.45/bin
+host.id=1vm2-u05r-d5
 configurations-xml=4bed5917496f3533830601b64594efc9
-default.com-microchip-mplab-mdbcore-PICKit3Tool-PICkit3DbgToolManager.md5=50072f33d27b72924000ca2dca4b7622
-com-microchip-mplab-nbide-embedded-makeproject-MakeProject.md5=e62346c0c0ecee2637e613b49cb7b7fa
-default.com-microchip-mplab-nbide-toolchain-xc8-XC8LanguageToolchain.md5=486b02ed36e5bdffb1f797e38fa058e5
-proj.dir=/home/ricardo/projetos/PIC/PIC16F/projects/19-74HC151_DIGITAL_MULTIPLEXER/PIC12F675/MPLAB_EXAMPLE/PIC12F675_74HC151_MULTIPLEXER_C.X
-host.platform=linux
+default.com-microchip-mplab-mdbcore-PICKit3Tool-PICkit3DbgToolManager.md5=5b9902b017a30efdeb77dee75a1e4e51
+com-microchip-mplab-nbide-embedded-makeproject-MakeProject.md5=f612087c95360c842296d189edfe3321
+default.com-microchip-mplab-nbide-toolchain-xc8-XC8LanguageToolchain.md5=bf89cdcdd6c0a49174fe4b605ef2b42d
+proj.dir=/Users/rcaratti/Desenvolvimento/eu/PIC/PIC16F/projects/19-74HC151_DIGITAL_MULTIPLEXER/PIC12F675/MPLAB_EXAMPLE/PIC12F675_74HC151_MULTIPLEXER_C.X
+host.platform=mac
