--- a/.gitignore
+++ b/.gitignore
@@ -234,3 +234,5 @@
 /projects/19-74HC151_MULTIPLEXER/PIC16F887/PIC16F887_74HC151_MULTIPLEXER.X/build/
 /projects/19-74HC151_MULTIPLEXER/PIC16F887/PIC16F887_74HC151_MULTIPLEXER.X/dist/
 /projects/19-74HC151_DIGITAL_MULTIPLEXER/PIC12F675/MPLAB_EXAMPLE/PIC12F675_74HC151_MULTIPLEXER_C.X/build/
+/projects/20-74HC4067_ANALOG_MULTIPLEXER/PIC12F675/MPLAB_EXAMPLE/PIC12F675_74HC4067_CURRENT_SENSORS_C.X/build/
+/projects/20-74HC4067_ANALOG_MULTIPLEXER/PIC12F675/MPLAB_EXAMPLE/PIC12F675_74HC4067_CURRENT_SENSORS_C.X/dist/
