--- a/projects/20-74HC4067_ANALOG_MULTIPLEXER/PIC12F675/MPLAB_EXAMPLE/PIC12F675_74HC4067_CURRENT_SENSORS_C.X/nbproject/Makefile-genesis.properties
+++ b/projects/20-74HC4067_ANALOG_MULTIPLEXER/PIC12F675/MPLAB_EXAMPLE/PIC12F675_74HC4067_CURRENT_SENSORS_C.X/nbproject/Makefile-genesis.properties
@@ -1,13 +1,13 @@
 #
-#Fri Apr 05 11:44:18 BRT 2024
+#Fri Apr 05 11:47:25 BRT 2024
 default.languagetoolchain.version=2.46
-default.Pack.dfplocation=
+default.Pack.dfplocation=/Applications/microchip/mplabx/v6.15/packs/Microchip/PIC10-12Fxxx_DFP/1.6.174
 conf.ids=default
 default.languagetoolchain.dir=/Applications/microchip/xc8/v2.46/bin
 host.id=0
-configurations-xml=46b1977d192a010718b6df29fcf3e0a6
+configurations-xml=d1af3d88e9d908e186ea5ec598a24b47
 default.com-microchip-mplab-mdbcore-PICKit3Tool-PICkit3DbgToolManager.md5=50072f33d27b72924000ca2dca4b7622
 com-microchip-mplab-nbide-embedded-makeproject-MakeProject.md5=e62346c0c0ecee2637e613b49cb7b7fa
 default.com-microchip-mplab-nbide-toolchain-xc8-XC8LanguageToolchain.md5=486b02ed36e5bdffb1f797e38fa058e5
-proj.dir=/Users/rcaratti/Desenvolvimento/eu/PIC/PIC16F/projects/19-74HC151_DIGITAL_MULTIPLEXER/PIC12F675/MPLAB_EXAMPLE/PIC12F675_74HC151_MULTIPLEXER_C.X
+proj.dir=/Users/rcaratti/Desenvolvimento/eu/PIC/PIC16F/projects/20-74HC4067_ANALOG_MULTIPLEXER/PIC12F675/MPLAB_EXAMPLE/PIC12F675_74HC4067_CURRENT_SENSORS_C.X
 host.platform=mac
