--- a/.gitignore
+++ b/.gitignore
@@ -238,3 +238,5 @@
 /projects/20-74HC4067_ANALOG_MULTIPLEXER/PIC12F675/MPLAB_EXAMPLE/PIC12F675_74HC4067_CURRENT_SENSORS_C.X/dist/
 /projects/21-I2C_WITH_PIC10F200_ASSEMBLY/MPLAB_EXAMPLES/PIC10F200_I2C_TEMPERATURE_C.X/dist/
 /projects/21-I2C_WITH_PIC10F200_ASSEMBLY/MPLAB_EXAMPLES/PIC10F200_I2C_TEMPERATURE_C.X/build/
+/projects/21-I2C_WITH_PIC10F2XX/PIC10F222/MPLAB_EXAMPLES/PIC10F222_I2C_TEMPERATURE_C.X/dist/
+/projects/21-I2C_WITH_PIC10F2XX/PIC10F222/MPLAB_EXAMPLES/PIC10F222_I2C_TEMPERATURE_C.X/build/
