--- a/.gitignore
+++ b/.gitignore
@@ -240,3 +240,5 @@
 /projects/21-I2C_WITH_PIC10F200_ASSEMBLY/MPLAB_EXAMPLES/PIC10F200_I2C_TEMPERATURE_C.X/build/
 /projects/21-I2C_WITH_PIC10F2XX/PIC10F222/MPLAB_EXAMPLES/PIC10F222_I2C_TEMPERATURE_C.X/dist/
 /projects/21-I2C_WITH_PIC10F2XX/PIC10F222/MPLAB_EXAMPLES/PIC10F222_I2C_TEMPERATURE_C.X/build/
+/projects/NewFolder/QN8066_FM_TRANSMITTER.X/build/
+/projects/NewFolder/QN8066_FM_TRANSMITTER.X/dist/
